--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 * {
-  font-family: 'Atkinson Hyperlegible', sans-serif;
+  font-family: "Atkinson Hyperlegible", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,7 +9,7 @@
 
 /* NAVBAR */
 nav {
-  background-color:rgba(23, 23, 68);
+  background-color: rgba(23, 23, 68);
   position: sticky;
   top: 0;
   left: 0;
@@ -17,29 +17,425 @@ nav {
   height: 70px;
   z-index: 1;
   box-shadow: 0 1px 3px rgb(20, 20, 20);
+  width: 100%;
+}
+
+/* Bigger Screens */
+@media (min-width: 720px) {
+  /* links appearance */
+  nav li a:link,
+  nav li a:visited {
+    text-decoration: none;
+    color: white;
+  }
+
+  /* logo */
+  nav div {
+    width: 250px;
+    height: 70px;
+    background-image: url("./images/Sparkles-logos_white.png");
+    background-size: 120%;
+    background-position: center;
+  }
+
+  /* WELCOMING */
+  header {
+    display: grid;
+    margin: 0 40px;
+    height: 88%;
+    text-align: left;
+    grid-template-columns: 2.5fr 1fr 1fr;
+  }
+  /* Computer photo */
+  .w-div-img {
+    /* background: blue; */
+    height: 100%;
+    width: 100%;
+    grid-area: 1/2/2/4;
+    background-image: url("./images/undraw_data_processing_yrrv.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-attachment: scroll;
+    margin-top: 70px;
+  }
+  /* Textbox for input */
+  .w-div-input-button input {
+    font-size: 22px;
+    padding: 10px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    width: 70%;
+    border-radius: 5px;
+    border: 1px rgba(23, 23, 68) solid;
+  }
+
+  /* Button for trying */
+  .w-div-input-button button {
+    font-size: 23px;
+    padding: 10px;
+    width: 25%;
+    border-radius: 5px;
+    border: none;
+    background-color: #171744;
+    color: white;
+  }
+  /* MAIN CONTAINER */
+  main,
+  footer {
+    padding: 20px 0 0 0;
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  /* Card divs */
+  .feature-items div {
+    box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 70px;
+  }
+
+  /* Container for the features */
+  .feature-items {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 40px;
+    height: 70%;
+  }
+  /* Features */
+  .features-div {
+    height: 650px;
+    position: relative;
+  }
+  /*  outter div of how it works */
+  .how-it-works-div {
+    height: 500px;
+    border: 2px solid #171744;
+    border-radius: 10px;
+    width: 100%;
+    box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377);
+  }
+  /* Phone */
+  .on-phone {
+    display: block;
+    width: 45%;
+    /* border: 1px solid rgb(0, 0, 0); */
+    /* box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377); */
+    border-radius: 10px;
+    float: right;
+  }
+  /* Web */
+  .on-web {
+    display: block;
+    width: 45%;
+    /* border: 1px solid rgb(0, 0, 0); */
+    /* box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377); */
+    border-radius: 10px;
+    float: left;
+  }
+  /* div for the cards */
+  .inner-pricing {
+    height: 420px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  /* Left div */
+  .premium-div {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 100%;
+    padding: 60px;
+    border-radius: 10px 0 0 10px;
+    box-shadow: -5px 5px 20px -8px rgba(36, 36, 36, 0.322);
+    border-top: 5px solid rgb(9, 9, 78);
+  }
+  /* Center div */
+  .premium-max-div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 110%;
+    padding: 60px;
+    border-radius: 10px;
+    box-shadow: 0 5px 20px rgba(36, 36, 36, 0.322);
+    border-top: 8px solid rgb(9, 9, 78);
+  }
+  /* Right Div */
+  .premium-plus-div {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 100%;
+    padding: 60px;
+    border-radius: 0 10px 10px 0;
+    box-shadow: 5px 5px 20px -8px rgba(36, 36, 36, 0.322);
+    border-top: 5px solid rgb(9, 9, 78);
+  }
+  /* Footer */
+  footer {
+    margin-top: 200px;
+    background-color: #171744;
+    color: white;
+    width: 100%;
+    padding: 50px 230px;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr 2.4fr;
+    column-gap: 20px;
+  }
+  /* Final bar container */
+  .copy-terms-div {
+    grid-area: 2/1/2/6;
+  }
+  .copy-terms-div * {
+    margin-bottom: 0;
+  }
+  /* copyright */
+  .copyright-div p {
+    float: left;
+    font-size: 15px;
+    font-weight: normal;
+    margin-bottom: 0;
+  }
+
+  /* Terms | Help */
+  .terms-div {
+    float: right;
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+  footer .copy-terms-div {
+    margin-bottom: 0;
+  }
+  /* input call to action */
+  .call-to-action-div input {
+    padding: 5px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    width: 60%;
+    border-radius: 5px;
+    border: 1px rgba(23, 23, 68) solid;
+    color: black;
+  }
+}
+
+/* Smaller Screens */
+@media (max-width: 720px) {
+  html {
+    width: 100%;
+  }
+  /* links appearance */
+  nav li a:link,
+  nav li a:visited {
+    visibility: hidden;
+    display: fixed;
+  }
+  nav {
+    display: flex;
+    justify-content: center;
+  }
+  /* logo */
+  nav div {
+    width: 250px;
+    height: 70px;
+    background-image: url("./images/Sparkles-logos_white.png");
+    background-size: 120%;
+    background-position: center;
+  }
+  /* WELCOMING */
+  header {
+    display: flex;
+    margin: 0 5px;
+    height: 65%;
+    justify-content: center;
+    flex-basis: 90%;
+  }
+  /* Computer photo */
+  .w-div-img {
+    visibility: hidden;
+    display: fixed;
+  }
+  .welcoming-container {
+    width: 100%;
+  }
+  /* Textbox for input */
+  .w-div-input-button input {
+    font-size: 18px;
+    padding: 10px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    width: 60%;
+    border-radius: 5px;
+    border: 1px rgba(23, 23, 68) solid;
+  }
+
+  /* Button for trying */
+  .w-div-input-button button {
+    font-size: 19px;
+    padding: 10px;
+    width: 33%;
+    border-radius: 5px;
+    border: none;
+    background-color: #171744;
+    color: white;
+  }
+  /* Cards */
+  .feature-items div {
+    /* box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377); */
+    padding: 0 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border-radius: 10px;
+    width: 100%;
+    height: 80%;
+  }
+  /* Container for the features */
+  .feature-items {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 150%;
+  }
+  /* Features */
+  .features-div {
+    width: 100%;
+    position: relative;
+    margin: 0 0;
+  }
+  /*  outter div of how it works */
+  .how-it-works-div {
+    height: 100%;
+    border-radius: 10px;
+    width: 100%;
+  }
+  /* Phone */
+  .on-phone {
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  /* Web */
+  .on-web {
+    display: block;
+    margin: 0 auto;
+    width: 60%;
+    text-align: center;
+  }
+  .how-it-works-div li {
+    list-style: none;
+  }
+
+  /* Left div */
+  .premium-div {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 60px;
+    order: 0;
+  }
+  /* Center div */
+  .premium-max-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 110%;
+    padding: 60px;
+    order: 3;
+  }
+  /* Right Div */
+  .premium-plus-div {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 60px 90px;
+    order: 2;
+  }
+  /* div for the cards */
+  .inner-pricing {
+    display: flex;
+    flex-direction: column;
+  }
+  /* Footer */
+  footer {
+    margin-top: 200px;
+    background-color: #171744;
+    color: white;
+    width: 100%;
+    padding: 50px 20px;
+    height: 90%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    column-gap: 5px;
+  }
+  .social-media-div {
+    grid-area: 1/1;
+    width: 50%;
+  }
+  .call-to-action-div {
+    grid-area: 1/2/1/4;
+  }
+  .call-to-action-div * {
+    width: 100%;
+  }
+  .services-div {
+    grid-area: 2/1/2/2;
+  }
+  .about-div {
+    grid-area: 2/2/2/3;
+    width: 100%;
+  }
+  .help-div {
+    grid-area: 2/3/2/4;
+  }
+  .copy-terms-div {
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    grid-area: 3/1/3/4;
+    align-items: center;
+  }
+  /* copyright */
+  .copyright-div p {
+    font-size: 15px;
+    font-weight: normal;
+    margin-bottom: 0;
+  }
+
+  /* Terms | Help */
+  .terms-div {
+    margin-bottom: 0;
+  }
 }
 
 /* spacing between items */
-nav ul, nav li, nav div {
+nav ul,
+nav li,
+nav div {
   display: inline-block;
   padding: 10px;
   margin: 0 20px;
   box-sizing: border-box;
-}
-
-/* logo */
-nav div {
-  width: 250px;
-  height: 70px;
-  background-image: url("./images/Sparkles-logos_white.png");
-  background-size: 120%;
-  background-position: center;
-}
-
-/* links appearance */
-nav li a:link, nav li a:visited {
-  text-decoration: none;
-  color: white;
 }
 
 /* position of box of links */
@@ -53,25 +449,6 @@ nav ul {
 /* last element */
 nav ul:last-child {
   margin-right: 50px;
-}
-
-/* MAIN CONTAINER */
-main, footer {
-  padding: 20px 0 0 0;
-  width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-  /* border: 1px solid #000; */
-}
-
-/* WELCOMING */
-header {
-  display: grid;
-  margin: 0 40px;
-  height: 90%;
-  text-align: left;
-  /* border: 1px solid black; */
-  grid-template-columns: 2fr 1fr 1fr;
 }
 
 .welcoming-container {
@@ -101,31 +478,9 @@ header {
 }
 
 /* container for the input and button */
-.w-div-input-button{
+.w-div-input-button {
   width: 100%;
   text-align: center;
-}
-
-/* Textbox for input */
-.w-div-input-button input {
-  font-size: 22px;
-  padding: 10px;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  width: 70%;
-  border-radius: 5px;
-  border: 1px rgba(23, 23, 68) solid;
-}
-
-/* Button for trying */
-.w-div-input-button button {
-  font-size: 23px;
-  padding: 10px;
-  width: 25%;
-  border-radius: 5px;
-  border: none;
-  background-color: #171744;
-  color: white;
 }
 
 .w-div-input-button button:hover {
@@ -133,28 +488,10 @@ header {
   cursor: pointer;
 }
 
-/* Computer photo */
-.w-div-img {
-  /* background: blue; */
-  height: 100%;
-  width: 100%;
-  grid-area: 1/2/2/4;
-  background-image: url("./images/undraw_data_processing_yrrv.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: bottom center;
-  background-attachment:scroll;
-  margin-top: 70px;
-}
-
-/* Features */
-.features-div {
-  height: 650px;
-  position: relative;
-}
-
 /* Defining the size of the anchor */
-#features-anchor, #how-it-works-anchor, #pricing-anchor {
+#features-anchor,
+#how-it-works-anchor,
+#pricing-anchor {
   height: 80px;
   width: 80px;
 }
@@ -172,26 +509,6 @@ header {
   margin-bottom: 70px;
 }
 
-/* Container for the features */
-.feature-items {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 40px;
-  height: 70%;
-}
-
-/* Card divs */
-.feature-items div {
-  box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377);
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  border-radius: 10px;
-  margin-bottom: 70px;
-}
-
 .feature-items h3 {
   margin-bottom: 10px;
   font-size: 22px;
@@ -206,7 +523,9 @@ header {
 }
 
 /* IMAGES */
-.monitor-img, .data-img, .support-img {
+.monitor-img,
+.data-img,
+.support-img {
   height: 70px;
   width: 100%;
   margin: 0;
@@ -233,7 +552,6 @@ header {
   background-image: url(./images/support.png);
 }
 
-
 /* How it works */
 #how-it-works {
   position: relative;
@@ -248,30 +566,11 @@ header {
   top: -130px;
 }
 
-/*  outter div of how it works */
-.how-it-works-div {
-  height: 500px;
-  border: 2px solid #171744;
-  border-radius: 10px;
-  width: 100%;
-  box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377);
-}
-
 /* Title of how it works */
 .how-it-works-div h2 {
   text-align: center;
   font-size: 42px;
   margin: 70px 0;
-}
-
-/* Web */
-.on-web {
-  display: block;
-  width: 45%;
-  /* border: 1px solid rgb(0, 0, 0); */
-  /* box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377); */
-  border-radius: 10px;
-  float: left;
 }
 
 /* clear-fix hack */
@@ -303,17 +602,6 @@ header {
 /* On web list of features */
 .on-web li {
   font-size: 20px;
-}
-
-
-/* Phone */
-.on-phone {
-  display: block;
-  width: 45%;
-  /* border: 1px solid rgb(0, 0, 0); */
-  /* box-shadow: 0 5px 20px rgba(36, 36, 36, 0.377); */
-  border-radius: 10px;
-  float: right;
 }
 
 /* Clear-fix hack */
@@ -363,7 +651,6 @@ header {
 /* Pricing Starts here */
 .pricing-div {
   margin: 70px 0;
-  
 }
 
 /* Title of the pricing */
@@ -371,27 +658,6 @@ header {
   text-align: center;
   margin: 70px 0;
   font-size: 42px;
-}
-
-/* div for the cards */
-.inner-pricing {
-  height: 420px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-/* Left div */
-.premium-div {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  height: 100%;
-  padding: 60px;
-  border-radius: 10px 0 0 10px;
-  box-shadow: -5px 5px 20px -8px rgba(36, 36, 36, 0.322);
-  border-top: 5px solid rgb(9, 9, 78);
 }
 
 /* 1 Star logo */
@@ -420,19 +686,6 @@ header {
   font-weight: 600;
 }
 
-/* Center div */
-.premium-max-div {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  height: 110%;
-  padding: 60px;
-  border-radius: 10px;
-  box-shadow: 0 5px 20px rgba(36, 36, 36, 0.322);
-  border-top: 8px solid rgb(9, 9, 78);
-}
-
 /* 3 starts logo */
 .premium-max-logo {
   background-image: url("./images/star.png");
@@ -457,20 +710,6 @@ header {
 .premium-max-div p {
   font-size: 20px;
   font-weight: 600;
-}
-
-/* Right Div */
-.premium-plus-div {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  height: 100%;
-  padding: 60px;
-  border-radius: 0 10px 10px 0;
-  box-shadow: 5px 5px 20px -8px rgba(36, 36, 36, 0.322);
-  border-top: 5px solid rgb(9, 9, 78);
 }
 
 /* 2 stars logo */
@@ -499,25 +738,12 @@ header {
   font-weight: 600;
 }
 
-/* Footer */
-footer {
-  margin-top: 200px;
-  background-color: #171744;
-  color: white;
-  width: 100%;
-  padding: 50px 230px;
-  height: 300px;
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 2.4fr;
-  column-gap: 20px;
-}
-
 /* Footer elements */
 footer * {
   text-decoration: none;
   color: white;
   list-style: none;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 /*  footer titles */
@@ -540,7 +766,6 @@ footer p {
   height: 26px;
   width: 190px;
   background-position: center;
-
 }
 
 /* List container spacing */
@@ -583,17 +808,6 @@ footer p {
   font-weight: normal;
 }
 
-/* input call to action */
-.call-to-action-div input {
-  padding: 5px;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  width: 60%;
-  border-radius: 5px;
-  border: 1px rgba(23, 23, 68) solid;
-  color: black;
-}
-
 .call-to-action-div input:focus {
   outline: none;
 }
@@ -602,7 +816,7 @@ footer p {
 .call-to-action-div button {
   background-color: rgb(33, 33, 102);
   height: 27x;
-  color:white;
+  color: white;
   padding: 5px;
   border: none;
   border-radius: 5px;
@@ -613,28 +827,8 @@ footer p {
   background-color: rgb(43, 43, 133);
 }
 
-/* Final bar container */
-.copy-terms-div {
-  grid-area: 2/1/2/6;
-}
-
 /* items organizing */
 .copy-terms-div * {
   display: inline-block;
-  margin: 0;
-}
-
-/* copyright */
-.copyright-div p {
-  float: left;
-  font-size: 15px;
-  font-weight: normal;
-  margin-bottom: 0;
-}
-
-/* Terms | Help */
-.terms-div {
-  float: right;
-  margin-right: 30px;
-  margin-bottom: 0;
+  margin: 0px 0;
 }
